Cascading Change Log

2.5.0 [unreleased]

  Updated c.f.h.p.HadoopFlowStepJob to call kill only jobs on that are not complete. In theory calling kill on a
  completed job should have no effect, but resulting logs could be confusing during post mortem.

  Added c.t.l.PartitionTap and c.t.h.PartitionTap to replace c.t.l.TemplateTap and c.t.h.TemplateTap respectively. The
  PartitionTap can be used as both a sink and source and provides pluggable partitioning via c.t.p.Partition.

  Added c.p.j.BufferJoin as a convenience to flag to the planner the following c.o.Buffer implements a join strategy.

  Updated c.o.BufferCall to allow access to the current c.p.j.JoinerClosure to allow for more complex join operations
  to be built out within a c.o.Buffer implementation.

  Added support for Apache Hadoop 2 and YARN.

2.2.0

  Fixed issue where c.p.CoGroup in local mode did not properly handle joins where the grouping j.u.Comparator
  did not treat null values as equal. SQL semantics expect null values to not be equivalent. c.p.HashJoin
  does not support non-equality between null and will issue a warning.

  Updated c.p.a.AggregateBy sub-classes to pass 0 as default threshold value to allow the system default value
  to be honored.

  Added c.o.a.MaxValue and c.o.a.MinValue c.o.Aggregator sub-classes to replace c.o.a.Max and c.o.a.Min classes
  respectively. MaxValue and MinValue rely on the values compared to be j.l.Comparable types resulting in a simpler
  implementation and support for max/min of non numeric types.

  Fixed issue where c.o.t.DateParser would drop incoming Tuples if the argument was null.

  Fixed issue where c.t.Hasher was not honored during grouping in local mode.

  Updated c.t.h.GlobHfs to use fewer resources when deriving member identifiers.

  Updated c.t.h.HadoopTapPlatformTest to skip the c.t.h.Dfs test if HDFS filesystem is unavailable on the current
  configuration.
